[package]
name = "ad5668"
version = "0.1.0"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust Embedded HAL driver for Analog Devices AD5668 DAC"
repository = "https://github.com/mendelt/ad5668"
categories = ["no-std", "embedded"]
keywords = ["dac", "spi"]
readme = "README.md"

[badges]
travis-ci = { repository = "mendelt/ad5668" }

[dependencies]
embedded-hal = "0.2.3"

[dev-dependencies]
embedded-hal-mock = "0.7.1"
