[package]
name = "bluepill-examples"
version = "0.1.1"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"

[dependencies]
ad5668 = {path = ".."}
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
hal = {package = "stm32f1xx-hal", version = "0.5.3", features = ["rt", "stm32f103", "medium"]}
panic-semihosting = "0.5.3"
